--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,65 @@
-cmake_minimum_required(VERSION 3.0.0)
-project(simple-package VERSION 0.1.0)
+cmake_minimum_required(VERSION 3.15.0)
+project(simple_package VERSION 0.1.0)
+set(PACKAGE_EXPORT_NAME SimplePackage)
 set(CMAKE_BUILD_TYPE Debug)
+set(SOURCE_FOLDERS "first_class" "second_class")
 
+# Uncomment the below if you want to other directory (default: /usr/local)
+# set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/install)
 
-add_library(first_library STATIC first_library/FirstClass.cpp)
-target_include_directories(first_library PUBLIC first_library)
+file(
+  GLOB PROJECT_SUBFOLDERS
+  RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
+  ${SOURCE_FOLDERS})
+set(LIBRARY_SOURCES "")
 
-add_library(second_library STATIC second_library/SecondClass.cpp)
-target_include_directories(second_library PUBLIC second_library)
+foreach(SUBFOLDER ${PROJECT_SUBFOLDERS})
+  # Check if the subfolder is a directory
+  if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER})
+    # Include all the cpp and hpp files in the subfolder
+    file(GLOB SUBFOLDER_SOURCES "${SUBFOLDER}/*.cpp" "${SUBFOLDER}/*.hpp")
+    # Add the sources to the library sources list
+    list(APPEND LIBRARY_SOURCES ${SUBFOLDER_SOURCES})
+  endif()
+endforeach()
 
-add_executable(simple_exe main.cpp)
-target_link_libraries(simple_exe PRIVATE first_library second_library)
+add_library(${PROJECT_NAME} SHARED ${LIBRARY_SOURCES})
+
+foreach(SUBFOLDER ${PROJECT_SUBFOLDERS})
+  if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER})
+    target_include_directories(
+      ${PROJECT_NAME}
+      PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER}>
+             $<INSTALL_INTERFACE:include/${SUBFOLDER}>)
+  endif()
+endforeach()
+
+install(
+  TARGETS ${PROJECT_NAME}
+  EXPORT ${PACKAGE_EXPORT_NAME}
+  LIBRARY DESTINATION lib
+  INCLUDES
+  DESTINATION include)
+
+foreach(SUBFOLDER ${PROJECT_SUBFOLDERS})
+  if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER})
+    file(GLOB SUBFOLDER_HEADERS "${SUBFOLDER}/*.hpp")
+    install(FILES ${SUBFOLDER_HEADERS} DESTINATION include/${SUBFOLDER})
+  endif()
+endforeach()
+
+export(TARGETS ${PROJECT_NAME}
+       FILE "${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_EXPORT_NAME}Config.cmake")
+
+install(
+  EXPORT ${PACKAGE_EXPORT_NAME}
+  FILE ${PACKAGE_EXPORT_NAME}Config.cmake
+  DESTINATION ${CMAKE_INSTALL_PREFIX})
+
+configure_file(
+  "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" IMMEDIATE @ONLY)
+
+add_custom_target(
+  uninstall COMMAND ${CMAKE_COMMAND} -P
+                    ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
