Exclude .hpp from source glob

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,7 @@ set(LIBRARY_SOURCES "")
 foreach(SUBFOLDER ${PROJECT_SUBFOLDERS})
   if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER})
     file(GLOB SUBFOLDER_SOURCES
-         "${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER}/*.cpp"
-         "${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER}/*.hpp")
+         "${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER}/*.cpp")
     list(APPEND LIBRARY_SOURCES ${SUBFOLDER_SOURCES})
   endif()
 endforeach()
