--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,21 +16,13 @@ set(LIBRARY_SOURCES "")
 foreach(SUBFOLDER ${PROJECT_SUBFOLDERS})
   if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER})
     file(GLOB SUBFOLDER_SOURCES
-         "${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER}/*.cpp")
+         "${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER}/*.cpp"
+         "${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER}/*.hpp")
     list(APPEND LIBRARY_SOURCES ${SUBFOLDER_SOURCES})
   endif()
 endforeach()
 
 add_library(${PROJECT_NAME} SHARED ${LIBRARY_SOURCES})
-
-foreach(SUBFOLDER ${PROJECT_SUBFOLDERS})
-  if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER})
-    include_directories(
-      ${PROJECT_NAME} PUBLIC
-      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/${SUBFOLDER}>
-      $<INSTALL_INTERFACE:include/${SUBFOLDER}>)
-  endif()
-endforeach()
 
 install(
   TARGETS ${PROJECT_NAME}
